--- a/languages/smart-custom-fields-ja.po
+++ b/languages/smart-custom-fields-ja.po
@@ -2,244 +2,254 @@
 # This file is distributed under the same license as the Smart Custom Fields package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Smart Custom Fields 1.1.3\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/smart-custom-fields\n"
-"POT-Creation-Date: 2015-02-17 12:16:37+00:00\n"
+"Project-Id-Version: Smart Custom Fields 1.2.0\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/tag/smart-custom-fields\n"
+"POT-Creation-Date: 2015-02-27 16:55:57+00:00\n"
+"PO-Revision-Date: 2015-02-28 02:04+0900\n"
+"Last-Translator: Takashi Kitajima <inc@2inc.org>\n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-02-17 21:50+0900\n"
-"Last-Translator: JOTAKI, Taisuke <tekapo@gmail.com>\n"
-"Language-Team: \n"
 "X-Generator: Poedit 1.7.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language: ja\n"
+"X-Poedit-KeywordsList: __;_e\n"
+"X-Poedit-Basepath: .\n"
+"X-Poedit-SearchPath-0: ..\n"
 
-#. Plugin Name of the plugin/theme
-#: classes/class.revisions.php:164 classes/class.settings.php:51
-#: classes/class.settings.php:52 classes/class.settings.php:53
-msgid "Smart Custom Fields"
-msgstr "Smart Custom Fields"
-
-#: classes/class.settings.php:40
-msgid "Same name exists!"
-msgstr "同じ名前が存在します！"
-
-#: classes/class.settings.php:54 classes/class.settings.php:55
-msgid "Add New"
-msgstr "新規追加"
-
-#: classes/class.settings.php:56
-msgid "New Field"
-msgstr "新規フィールド"
-
-#: classes/class.settings.php:57
-msgid "Edit Field"
-msgstr "フィールド編集"
-
-#: classes/class.settings.php:58
-msgid "View Field"
-msgstr "フィールドを表示"
-
-#: classes/class.settings.php:59
-msgid "All Fields"
-msgstr "すべてのフィールド"
-
-#: classes/class.settings.php:60
-msgid "Search Fields"
-msgstr "フィールドを検索"
-
-#: classes/class.settings.php:61
-msgid "Parent Fields:"
-msgstr "親フィールド:"
-
-#: classes/class.settings.php:62
-msgid "No Fields found."
-msgstr "フィールドは見つかりませんでした。"
-
-#: classes/class.settings.php:63
-msgid "No Fields found in Trash."
-msgstr "ゴミ箱にフィールドは見つかりませんでした"
-
-#: classes/class.settings.php:86
-msgid "Custom Fields"
-msgstr "カスタムフィールド"
-
-#: classes/class.settings.php:92
-msgid "Display conditions"
-msgstr "表示条件"
-
-#: classes/class.settings.php:154
-msgid "Repeat"
-msgstr "繰り返し"
-
-#: classes/class.settings.php:159
-msgid "Group name"
-msgstr "グループ名"
-
-#: classes/class.settings.php:188
-msgid "Name"
-msgstr "名前"
-
-#: classes/class.settings.php:199
-msgid "Label"
-msgstr "ラベル"
-
-#: classes/class.settings.php:210
-msgid "Type"
-msgstr "タイプ"
-
-#: classes/class.settings.php:218
-msgid "Basic fields"
-msgstr "基本フィールド"
-
-#: classes/class.settings.php:222
-msgid "Select fields"
-msgstr "選択フィールド"
-
-#: classes/class.settings.php:226
-msgid "Content fields"
-msgstr "コンテンツフィールド"
-
-#: classes/class.settings.php:230
-msgid "Other fields"
-msgstr "その他のフィールド"
-
-#: classes/class.settings.php:263
-msgid "Add Sub field"
-msgstr "サブフィールドを追加"
-
-#: classes/class.settings.php:267
-msgid "Add Field"
-msgstr "フィールド追加"
-
-#: classes/class.settings.php:298 classes/fields/class.field-relation.php:170
-msgid "Post Types"
-msgstr "投稿タイプ"
-
-#: classes/class.settings.php:305
-msgid "Post Ids ( Comma separated )"
-msgstr "投稿 ID (カンマ区切り)"
-
-#: classes/fields/class.field-check.php:20
-msgid "Check"
-msgstr "チェック"
-
-#: classes/fields/class.field-check.php:65 classes/fields/class.field-radio.php:63
-#: classes/fields/class.field-select.php:60
-msgid "Choices"
-msgstr "選択"
-
-#: classes/fields/class.field-check.php:74
-#: classes/fields/class.field-colorpicker.php:69
-#: classes/fields/class.field-datepicker.php:117
-#: classes/fields/class.field-radio.php:72 classes/fields/class.field-select.php:69
-#: classes/fields/class.field-text.php:50 classes/fields/class.field-textarea.php:50
-#: classes/fields/class.field-wysiwyg.php:88
-msgid "Default"
-msgstr "デフォルト"
-
-#: classes/fields/class.field-check.php:83
-#: classes/fields/class.field-colorpicker.php:78
-#: classes/fields/class.field-datepicker.php:180
-#: classes/fields/class.field-file.php:78 classes/fields/class.field-image.php:77
-#: classes/fields/class.field-radio.php:81
-#: classes/fields/class.field-relation.php:191
-#: classes/fields/class.field-select.php:78 classes/fields/class.field-text.php:59
-#: classes/fields/class.field-textarea.php:59
-#: classes/fields/class.field-wysiwyg.php:97
-msgid "Notes"
-msgstr "注記"
-
-#: classes/fields/class.field-colorpicker.php:21
-msgid "Color picker"
-msgstr "カラーピッカー"
-
-#: classes/fields/class.field-datepicker.php:21
-msgid "Date picker"
-msgstr "日付ピッカー"
-
-#: classes/fields/class.field-datepicker.php:126
-msgid "Date Format"
-msgstr "日付のフォーマット"
-
-#: classes/fields/class.field-datepicker.php:134
-msgid "e.g dd/mm/yy"
-msgstr "例: dd/mm/yy"
-
-#: classes/fields/class.field-datepicker.php:144
-msgid "Max Date"
-msgstr "最大日付"
-
-#: classes/fields/class.field-datepicker.php:152
-#: classes/fields/class.field-datepicker.php:170
-msgid "e.g +1m +1w"
-msgstr "例: +1m +1w"
-
-#: classes/fields/class.field-datepicker.php:162
-msgid "Min Date"
-msgstr "最小日付"
-
-#: classes/fields/class.field-file.php:20
-msgid "File"
-msgstr "ファイル"
-
-#: classes/fields/class.field-file.php:37 classes/fields/class.field-image.php:37
-msgid "Delete"
-msgstr "削除"
-
-#: classes/fields/class.field-file.php:60
-msgid "File Select"
-msgstr "ファイル選択"
-
-#: classes/fields/class.field-image.php:20
-msgid "Image"
-msgstr "画像"
-
-#: classes/fields/class.field-image.php:59
-msgid "Image Select"
-msgstr "画像選択"
-
-#: classes/fields/class.field-radio.php:20
-msgid "Radio"
-msgstr "ラジオボタン"
-
-#: classes/fields/class.field-relation.php:22
-msgid "Relation"
-msgstr "リレーション"
-
-#: classes/fields/class.field-relation.php:153
-msgid "Load more"
-msgstr "さらに読み込む"
-
-#: classes/fields/class.field-select.php:20
-msgid "Select"
-msgstr "選択"
-
-#: classes/fields/class.field-text.php:20
-msgid "Text"
-msgstr "テキスト"
-
-#: classes/fields/class.field-textarea.php:20
-msgid "Textarea"
-msgstr "TEXTAREA"
-
-#: classes/fields/class.field-wysiwyg.php:21
-msgid "Wysiwyg"
-msgstr "WYSIWYG"
-
-#: classes/fields/class.field-wysiwyg.php:113
-#: classes/fields/class.field-wysiwyg.php:114
-msgid "Add Media"
-msgstr "メディアを追加"
-
-#: smart-custom-fields.php:120
+#: classes/controller/class.editor.php:53
 msgid "Image setting"
 msgstr "画像設定"
 
-#: smart-custom-fields.php:121
+#: classes/controller/class.editor.php:54
 msgid "File setting"
 msgstr "ファイル設定"
+
+#: classes/controller/class.settings.php:29
+msgid "Basic fields"
+msgstr "基本フィールド"
+
+#: classes/controller/class.settings.php:33
+msgid "Select fields"
+msgstr "選択フィールド"
+
+#: classes/controller/class.settings.php:37
+msgid "Content fields"
+msgstr "コンテンツフィールド"
+
+#: classes/controller/class.settings.php:41
+msgid "Other fields"
+msgstr "その他のフィールド"
+
+#: classes/controller/class.settings.php:63
+msgid "Same name exists!"
+msgstr "同じ名前が存在します！"
+
+#: classes/controller/class.settings.php:74
+msgid "Custom Fields"
+msgstr "カスタムフィールド"
+
+#: classes/controller/class.settings.php:80
+msgid "Display conditions"
+msgstr "表示条件"
+
+#: classes/controller/class.settings.php:134
+msgid "Type"
+msgstr "タイプ"
+
+#: classes/controller/class.settings.php:169
+msgid "Add Sub field"
+msgstr "サブフィールドを追加"
+
+#: classes/controller/class.settings.php:173
+msgid "Add Field"
+msgstr "フィールド追加"
+
+#: classes/controller/class.settings.php:203
+#: classes/fields/class.field-relation.php:178
+msgid "Post Types"
+msgstr "投稿タイプ"
+
+#: classes/controller/class.settings.php:210
+msgid "Post Ids ( Comma separated )"
+msgstr "投稿 ID (カンマ区切り)"
+
+#: classes/fields/class.field-check.php:19
+msgid "Check"
+msgstr "チェックボックス"
+
+#: classes/fields/class.field-check.php:74
+#: classes/fields/class.field-radio.php:72
+#: classes/fields/class.field-select.php:69
+msgid "Choices"
+msgstr "選択肢"
+
+#: classes/fields/class.field-check.php:83
+#: classes/fields/class.field-colorpicker.php:78
+#: classes/fields/class.field-datepicker.php:128
+#: classes/fields/class.field-radio.php:81
+#: classes/fields/class.field-select.php:78
+#: classes/fields/class.field-text.php:58
+#: classes/fields/class.field-textarea.php:58
+#: classes/fields/class.field-wysiwyg.php:96
+msgid "Default"
+msgstr "デフォルト"
+
+#: classes/fields/class.field-check.php:92
+#: classes/fields/class.field-colorpicker.php:87
+#: classes/fields/class.field-datepicker.php:191
+#: classes/fields/class.field-file.php:85
+#: classes/fields/class.field-image.php:84
+#: classes/fields/class.field-radio.php:90
+#: classes/fields/class.field-relation.php:199
+#: classes/fields/class.field-select.php:87
+#: classes/fields/class.field-text.php:67
+#: classes/fields/class.field-textarea.php:67
+#: classes/fields/class.field-wysiwyg.php:105
+msgid "Notes"
+msgstr "注記"
+
+#: classes/fields/class.field-colorpicker.php:20
+msgid "Color picker"
+msgstr "カラーピッカー"
+
+#: classes/fields/class.field-datepicker.php:20
+msgid "Date picker"
+msgstr "日付ピッカー"
+
+#: classes/fields/class.field-datepicker.php:137
+msgid "Date Format"
+msgstr "日付のフォーマット"
+
+#: classes/fields/class.field-datepicker.php:145
+msgid "e.g dd/mm/yy"
+msgstr "例: dd/mm/yy"
+
+#: classes/fields/class.field-datepicker.php:155
+msgid "Max Date"
+msgstr "最大日付"
+
+#: classes/fields/class.field-datepicker.php:163
+#: classes/fields/class.field-datepicker.php:181
+msgid "e.g +1m +1w"
+msgstr "例: +1m +1w"
+
+#: classes/fields/class.field-datepicker.php:173
+msgid "Min Date"
+msgstr "最小日付"
+
+#: classes/fields/class.field-file.php:19
+msgid "File"
+msgstr "ファイル"
+
+#: classes/fields/class.field-file.php:44
+#: classes/fields/class.field-image.php:44
+msgid "Delete"
+msgstr "削除"
+
+#: classes/fields/class.field-file.php:67
+msgid "File Select"
+msgstr "ファイル選択"
+
+#: classes/fields/class.field-image.php:19
+msgid "Image"
+msgstr "画像"
+
+#: classes/fields/class.field-image.php:66
+msgid "Image Select"
+msgstr "画像選択"
+
+#: classes/fields/class.field-radio.php:19
+msgid "Radio"
+msgstr "ラジオボタン"
+
+#: classes/fields/class.field-relation.php:21
+msgid "Relation"
+msgstr "リレーション"
+
+#: classes/fields/class.field-relation.php:161
+msgid "Load more"
+msgstr "さらに読み込む"
+
+#: classes/fields/class.field-select.php:19
+msgid "Select"
+msgstr "セレクトボックス"
+
+#: classes/fields/class.field-text.php:19
+msgid "Text"
+msgstr "テキスト"
+
+#: classes/fields/class.field-textarea.php:19
+msgid "Textarea"
+msgstr "テキストエリア"
+
+#: classes/fields/class.field-wysiwyg.php:20
+msgid "Wysiwyg"
+msgstr "WYSIWYG"
+
+#: classes/fields/class.field-wysiwyg.php:121
+#: classes/fields/class.field-wysiwyg.php:122
+msgid "Add Media"
+msgstr "メディアを追加"
+
+#: classes/models/class.abstract-field-base.php:105
+msgid "Name"
+msgstr "名前"
+
+#: classes/models/class.abstract-field-base.php:116
+msgid "Label"
+msgstr "ラベル"
+
+#: classes/models/class.group.php:114
+msgid "Repeat"
+msgstr "繰り返し"
+
+#: classes/models/class.group.php:119
+msgid "Group name"
+msgstr "グループ名"
+
+#: classes/models/class.revisions.php:190 smart-custom-fields.php:102
+#: smart-custom-fields.php:103 smart-custom-fields.php:104
+msgid "Smart Custom Fields"
+msgstr "Smart Custom Fields"
+
+#: smart-custom-fields.php:105 smart-custom-fields.php:106
+#: smart-custom-fields.php:145 smart-custom-fields.php:146
+msgid "Add New"
+msgstr "新規追加"
+
+#: smart-custom-fields.php:107
+msgid "New Field"
+msgstr "新規フィールド"
+
+#: smart-custom-fields.php:108
+msgid "Edit Field"
+msgstr "フィールド編集"
+
+#: smart-custom-fields.php:109
+msgid "View Field"
+msgstr "フィールドを表示"
+
+#: smart-custom-fields.php:110
+msgid "All Fields"
+msgstr "すべてのフィールド"
+
+#: smart-custom-fields.php:111
+msgid "Search Fields"
+msgstr "フィールドを検索"
+
+#: smart-custom-fields.php:112
+msgid "Parent Fields:"
+msgstr "親フィールド:"
+
+#: smart-custom-fields.php:113
+msgid "No Fields found."
+msgstr "フィールドは見つかりませんでした。"
+
+#: smart-custom-fields.php:114
+msgid "No Fields found in Trash."
+msgstr "ゴミ箱にフィールドは見つかりませんでした"
 
 #. Plugin URI of the plugin/theme
 msgid "https://github.com/inc2734/smart-custom-fields/"
