--- a/languages/smart-custom-fields-ja.po
+++ b/languages/smart-custom-fields-ja.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/smart-custom-fields\n"
 "POT-Creation-Date: 2015-04-29 04:43:41+00:00\n"
 "PO-Revision-Date: 2015-04-29 13:44+0900\n"
-"Last-Translator: Takashi Kitajima <inc@2inc.org>\n"
+"Last-Translator: inc2734 <inc@2inc.org>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -319,8 +319,8 @@ msgid "Smart Custom Fields is a simple plugin that management custom fields."
 msgstr "Smart Custom Fields はカスタムフィールドを管理するシンプルなプラグインです。"
 
 #. Author of the plugin/theme
-msgid "Takashi Kitajima"
-msgstr "Takashi Kitajima"
+msgid "inc2734"
+msgstr "inc2734"
 
 #. Author URI of the plugin/theme
 msgid "http://2inc.org"
