--- a/languages/smart-custom-fields-pt_BR.po
+++ b/languages/smart-custom-fields-pt_BR.po
@@ -3,113 +3,117 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Smart Custom Fields 3.1.2\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/smart-custom-fields\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/smart-custom-"
+"fields\n"
 "POT-Creation-Date: 2017-02-02 06:40:56+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2017-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2018-05-29 19:42-0300\n"
+"Last-Translator: robsonds <robssanches@hotmail.com>\n"
+"Language-Team: Português do Brasil (@robssanches)\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Poedit 2.0.7\n"
 
 #: classes/controller/class.controller-base.php:46
 msgid "Image setting"
-msgstr ""
+msgstr "Configuração de imagem"
 
 #: classes/controller/class.controller-base.php:47
 msgid "File setting"
-msgstr ""
+msgstr "Configuração de arquivo"
 
 #: classes/controller/class.option.php:57
 msgid "Save settings"
-msgstr ""
+msgstr "Salvar configurações"
 
 #: classes/controller/class.profile.php:43
 #: classes/controller/class.settings.php:76
 msgid "Custom Fields"
-msgstr ""
+msgstr "Campos personalizados"
 
 #: classes/controller/class.settings.php:29
 msgid "Basic fields"
-msgstr ""
+msgstr "Campos básicos"
 
 #: classes/controller/class.settings.php:33
 msgid "Select fields"
-msgstr ""
+msgstr "Selecione os campos"
 
 #: classes/controller/class.settings.php:37
 msgid "Content fields"
-msgstr ""
+msgstr "Campos de conteúdo"
 
 #: classes/controller/class.settings.php:41
 msgid "Other fields"
-msgstr ""
+msgstr "Outros campos"
 
 #: classes/controller/class.settings.php:64
 msgid "Same name exists!"
-msgstr ""
+msgstr "O mesmo nome existe!"
 
 #: classes/controller/class.settings.php:82
 msgid "Display conditions ( Post )"
-msgstr ""
+msgstr "Condições de exibição (Post)"
 
 #: classes/controller/class.settings.php:89
 msgid "Display conditions ( Profile )"
-msgstr ""
+msgstr "Condições de exibição (Perfil)"
 
 #: classes/controller/class.settings.php:96
 msgid "Display conditions ( Taxonomy )"
-msgstr ""
+msgstr "Condições de exibição (Taxonomia)"
 
 #: classes/controller/class.settings.php:103
 msgid "Display conditions ( Options page )"
-msgstr ""
+msgstr "Condições de exibição (Página de Opções)"
 
 #: classes/controller/class.settings.php:163
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 #: classes/controller/class.settings.php:198
 msgid "Add Sub field"
-msgstr ""
+msgstr "Adicionar Campo Secundário"
 
 #: classes/controller/class.settings.php:202
 msgid "Add Field"
-msgstr ""
+msgstr "Adicionar Campo"
 
 #: classes/controller/class.settings.php:232
 #: classes/fields/class.field-relation.php:225
 msgid "Post Types"
-msgstr ""
+msgstr "Tipos de Post"
 
 #: classes/controller/class.settings.php:239
 msgid "Post Ids ( Comma separated )"
-msgstr ""
+msgstr "IDs de postagem (separados por vírgula)"
 
 #: classes/controller/class.settings.php:264
 msgid "Roles"
-msgstr ""
+msgstr "Funções"
 
 #: classes/controller/class.settings.php:290
 #: classes/fields/class.field-taxonomy.php:228
 msgid "Taxonomies"
-msgstr ""
+msgstr "Taxonomias"
 
 #: classes/controller/class.settings.php:314
 msgid "Options pages"
-msgstr ""
+msgstr "Páginas de opções"
 
 #: classes/fields/class.field-boolean.php:23
 msgid "Boolean"
-msgstr ""
+msgstr "Verdadeiro ou Falso"
 
 #: classes/fields/class.field-boolean.php:38
 msgid "Yes"
-msgstr ""
+msgstr "Sim"
 
 #: classes/fields/class.field-boolean.php:39
 msgid "No"
-msgstr ""
+msgstr "Não"
 
 #: classes/fields/class.field-boolean.php:82
 #: classes/fields/class.field-check.php:117
@@ -122,14 +126,16 @@ msgstr ""
 #: classes/fields/class.field-wysiwyg.php:119
 msgid "Default"
 msgstr ""
+"7/5000\n"
+"Padrão"
 
 #: classes/fields/class.field-boolean.php:107
 msgid "TRUE Label"
-msgstr ""
+msgstr "Rótulo VERDADEIRO"
 
 #: classes/fields/class.field-boolean.php:117
 msgid "FALSE Label"
-msgstr ""
+msgstr "Rótulo FALSO"
 
 #: classes/fields/class.field-boolean.php:127
 #: classes/fields/class.field-check.php:126
@@ -145,7 +151,7 @@ msgstr ""
 #: classes/fields/class.field-textarea.php:88
 #: classes/fields/class.field-wysiwyg.php:128
 msgid "Instruction"
-msgstr ""
+msgstr "Instrução"
 
 #: classes/fields/class.field-boolean.php:134
 #: classes/fields/class.field-check.php:133
@@ -161,204 +167,208 @@ msgstr ""
 #: classes/fields/class.field-textarea.php:95
 #: classes/fields/class.field-wysiwyg.php:135
 msgid "Notes"
-msgstr ""
+msgstr "Notas"
 
 #: classes/fields/class.field-check.php:21
 msgid "Check"
-msgstr ""
+msgstr "Checkbox"
 
 #: classes/fields/class.field-check.php:87
 #: classes/fields/class.field-radio.php:86
 #: classes/fields/class.field-select.php:81
 msgid "Choices"
-msgstr ""
+msgstr "Opções"
 
 #: classes/fields/class.field-check.php:93
 #: classes/fields/class.field-radio.php:92
 #: classes/fields/class.field-select.php:87
-msgid "If you want to separate the key and the value, enter as follows: key => value"
+msgid ""
+"If you want to separate the key and the value, enter as follows: key => value"
 msgstr ""
+"Se você deseja separar a chave e o valor, insira da seguinte forma: key => "
+"value"
 
 #: classes/fields/class.field-check.php:97
 #: classes/fields/class.field-radio.php:96
 msgid "Display Direction"
-msgstr ""
+msgstr "Direção de Exibição"
 
 #: classes/fields/class.field-check.php:101
 #: classes/fields/class.field-radio.php:100
 msgid "horizontal"
-msgstr ""
+msgstr "horizontal"
 
 #: classes/fields/class.field-check.php:102
 #: classes/fields/class.field-radio.php:101
 msgid "vertical"
-msgstr ""
+msgstr "vertical"
 
 #: classes/fields/class.field-colorpicker.php:29
 msgid "Color picker"
-msgstr ""
+msgstr "Seletor de cores"
 
 #: classes/fields/class.field-datepicker.php:29
 msgid "Date picker"
-msgstr ""
+msgstr "Seletor de data"
 
 #: classes/fields/class.field-datepicker.php:135
 msgid "Date Format"
-msgstr ""
+msgstr "Formato de data"
 
 #: classes/fields/class.field-datepicker.php:143
 msgid "e.g dd/mm/yy"
-msgstr ""
+msgstr "ex. dd/mm/yy"
 
 #: classes/fields/class.field-datepicker.php:153
 msgid "Max Date"
-msgstr ""
+msgstr "Data máxima"
 
 #: classes/fields/class.field-datepicker.php:161
 #: classes/fields/class.field-datepicker.php:179
 msgid "e.g +1m +1w"
-msgstr ""
+msgstr "ex. +1m +1w"
 
 #: classes/fields/class.field-datepicker.php:171
 msgid "Min Date"
-msgstr ""
+msgstr "Data mínima"
 
 #: classes/fields/class.field-file.php:21
 msgid "File"
-msgstr ""
+msgstr "Arquivo"
 
 #: classes/fields/class.field-file.php:51
 #: classes/fields/class.field-image.php:52
 msgid "Delete"
-msgstr ""
+msgstr "Excluir"
 
 #: classes/fields/class.field-file.php:92
 msgid "File Select"
-msgstr ""
+msgstr "Seleção de Arquivo"
 
 #: classes/fields/class.field-image.php:21
 msgid "Image"
-msgstr ""
+msgstr "Imagem"
 
 #: classes/fields/class.field-image.php:92
 msgid "Image Select"
-msgstr ""
+msgstr "Selecionar imagem"
 
 #: classes/fields/class.field-image.php:129
 msgid "Preview Size"
-msgstr ""
+msgstr "Tamanho da pré-visualização"
 
 #: classes/fields/class.field-radio.php:21
 msgid "Radio"
-msgstr ""
+msgstr "Radio"
 
 #: classes/fields/class.field-relation.php:24
 msgid "Related Posts"
-msgstr ""
+msgstr "Posts Relacionados"
 
 #: classes/fields/class.field-relation.php:203
 #: classes/fields/class.field-taxonomy.php:206
 msgid "Search..."
-msgstr ""
+msgstr "Pesquisa..."
 
 #: classes/fields/class.field-relation.php:207
 #: classes/fields/class.field-taxonomy.php:210
 msgid "Load more"
-msgstr ""
+msgstr "Carregar mais"
 
 #: classes/fields/class.field-relation.php:246
 #: classes/fields/class.field-taxonomy.php:247
 msgid "Selectable number"
-msgstr ""
+msgstr "Número selecionável"
 
 #: classes/fields/class.field-select.php:21
 msgid "Select"
-msgstr ""
+msgstr "Seleção"
 
 #: classes/fields/class.field-taxonomy.php:24
 msgid "Related Terms"
-msgstr ""
+msgstr "Termos relacionados"
 
 #: classes/fields/class.field-text.php:21
 msgid "Text"
-msgstr ""
+msgstr "Texto"
 
 #: classes/fields/class.field-textarea.php:21
 msgid "Textarea"
-msgstr ""
+msgstr "Área de Texto"
 
 #: classes/fields/class.field-textarea.php:69
 msgid "Rows"
-msgstr ""
+msgstr "Linhas"
 
 #: classes/fields/class.field-wysiwyg.php:26
 msgid "Wysiwyg"
-msgstr ""
+msgstr "Wysiwyg"
 
 #: classes/fields/class.field-wysiwyg.php:107
 msgid "Visual"
-msgstr ""
+msgstr "Visual"
 
 #: classes/fields/class.field-wysiwyg.php:157
 #: classes/fields/class.field-wysiwyg.php:158
 msgid "Add Media"
-msgstr ""
+msgstr "Adicionar Mídia"
 
 #: classes/models/class.abstract-field-base.php:105
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #: classes/models/class.abstract-field-base.php:116
 msgid "Label"
-msgstr ""
+msgstr "Rótulo"
 
 #: classes/models/class.group.php:127
 msgid "Repeat"
-msgstr ""
+msgstr "Repetir"
 
 #: classes/models/class.group.php:132
 msgid "Group name"
-msgstr ""
+msgstr "Nome do grupo"
 
 #: smart-custom-fields.php:170 smart-custom-fields.php:171
 #: smart-custom-fields.php:217 smart-custom-fields.php:218
 msgid "Add New"
-msgstr ""
+msgstr "Adicionar Novo"
 
 #: smart-custom-fields.php:172
 msgid "New Field"
-msgstr ""
+msgstr "Novo Campo"
 
 #: smart-custom-fields.php:173
 msgid "Edit Field"
-msgstr ""
+msgstr "Editar campo"
 
 #: smart-custom-fields.php:174
 msgid "View Field"
-msgstr ""
+msgstr "Visualizar campo"
 
 #: smart-custom-fields.php:175
 msgid "All Fields"
-msgstr ""
+msgstr "Todos os Campos"
 
 #: smart-custom-fields.php:176
 msgid "Search Fields"
-msgstr ""
+msgstr "Campos de Pesquisa"
 
 #: smart-custom-fields.php:177
 msgid "Parent Fields:"
-msgstr ""
+msgstr "Campos pai:"
 
 #: smart-custom-fields.php:178
 msgid "No Fields found."
-msgstr ""
+msgstr "Nenhum campo encontrado."
 
 #: smart-custom-fields.php:179
 msgid "No Fields found in Trash."
-msgstr ""
+msgstr "Nenhum campo encontrado na lixeira."
+
 #. Plugin Name of the plugin/theme
 msgid "Smart Custom Fields"
-msgstr ""
+msgstr "Smart Custom Fields"
 
 #. Plugin URI of the plugin/theme
 msgid "https://github.com/inc2734/smart-custom-fields/"
@@ -367,6 +377,7 @@ msgstr ""
 #. Description of the plugin/theme
 msgid "Smart Custom Fields is a simple plugin that management custom fields."
 msgstr ""
+"Smart Custom Fields é um plugin simples que gerencia campos personalizados."
 
 #. Author of the plugin/theme
 msgid "inc2734"
