correcting the name of the last translator

--- a/languages/smart-custom-fields-ja.po
+++ b/languages/smart-custom-fields-ja.po
@@ -7,7 +7,7 @@ msgstr ""
 "fields\n"
 "POT-Creation-Date: 2017-02-02 06:40:56+00:00\n"
 "PO-Revision-Date: 2018-05-29 22:10+0000\n"
-"Last-Translator: robsonds <robssanches@hotmail.com>\n"
+"Last-Translator: robssanches <robssanches@hotmail.com>\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
