--- a/languages/smart-custom-fields-pt_BR.po
+++ b/languages/smart-custom-fields-pt_BR.po
@@ -10,8 +10,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2018-05-29 19:42-0300\n"
-"Last-Translator: robsonds <robssanches@hotmail.com>\n"
-"Language-Team: Português do Brasil (@robssanches)\n"
+"Last-Translator: robssanches <robssanches@hotmail.com>\n"
+"Language-Team: Português do Brasil \n"
 "Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 2.0.7\n"
