--- a/languages/smart-custom-fields.pot
+++ b/languages/smart-custom-fields.pot
@@ -1,17 +1,23 @@
 # Copyright (C) 2018 Smart Custom Fields
 # This file is distributed under the same license as the Smart Custom Fields package.
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Smart Custom Fields 3.1.6\n"
+"Project-Id-Version: Smart Custom Fields 3.1.7\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/smart-custom-"
 "fields\n"
-"POT-Creation-Date: 2018-05-30 22:10:00+00:00\n"
+"POT-Creation-Date: 2018-06-02 21:26-0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "PO-Revision-Date: 2018-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: Smart Custom Fields <LL@li.org>\n"
+"X-Generator: Poedit 2.0.7\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: esc_html__;__;_n;_x;_n_noop;_e\n"
+"X-Poedit-Basepath: ..\n"
+"X-Poedit-SearchPath-0: .\n"
 
 #: classes/controller/class.controller-base.php:46
 msgid "Image setting"
@@ -21,29 +27,9 @@ msgstr ""
 msgid "File setting"
 msgstr ""
 
-#: classes/controller/class.option.php:57
-msgid "Save settings"
-msgstr ""
-
 #: classes/controller/class.profile.php:43
 #: classes/controller/class.settings.php:76
 msgid "Custom Fields"
-msgstr ""
-
-#: classes/controller/class.settings.php:29
-msgid "Basic fields"
-msgstr ""
-
-#: classes/controller/class.settings.php:33
-msgid "Select fields"
-msgstr ""
-
-#: classes/controller/class.settings.php:37
-msgid "Content fields"
-msgstr ""
-
-#: classes/controller/class.settings.php:41
-msgid "Other fields"
 msgstr ""
 
 #: classes/controller/class.settings.php:64
@@ -66,20 +52,7 @@ msgstr ""
 msgid "Display conditions ( Options page )"
 msgstr ""
 
-#: classes/controller/class.settings.php:163
-msgid "Type"
-msgstr ""
-
-#: classes/controller/class.settings.php:198
-msgid "Add Sub field"
-msgstr ""
-
-#: classes/controller/class.settings.php:202
-msgid "Add Field"
-msgstr ""
-
 #: classes/controller/class.settings.php:232
-#: classes/fields/class.field-related-posts.php:231
 msgid "Post Types"
 msgstr ""
 
@@ -92,7 +65,6 @@ msgid "Roles"
 msgstr ""
 
 #: classes/controller/class.settings.php:290
-#: classes/fields/class.field-related-terms.php:229
 msgid "Taxonomies"
 msgstr ""
 
@@ -112,78 +84,8 @@ msgstr ""
 msgid "No"
 msgstr ""
 
-#: classes/fields/class.field-boolean.php:82
-#: classes/fields/class.field-check.php:117
-#: classes/fields/class.field-colorpicker.php:103
-#: classes/fields/class.field-datepicker.php:125
-#: classes/fields/class.field-radio.php:116
-#: classes/fields/class.field-select.php:91
-#: classes/fields/class.field-text.php:66
-#: classes/fields/class.field-textarea.php:79
-#: classes/fields/class.field-wysiwyg.php:122
-msgid "Default"
-msgstr ""
-
-#: classes/fields/class.field-boolean.php:107
-msgid "TRUE Label"
-msgstr ""
-
-#: classes/fields/class.field-boolean.php:117
-msgid "FALSE Label"
-msgstr ""
-
-#: classes/fields/class.field-boolean.php:127
-#: classes/fields/class.field-check.php:126
-#: classes/fields/class.field-colorpicker.php:112
-#: classes/fields/class.field-datepicker.php:189
-#: classes/fields/class.field-file.php:117
-#: classes/fields/class.field-image.php:112
-#: classes/fields/class.field-radio.php:125
-#: classes/fields/class.field-related-posts.php:260
-#: classes/fields/class.field-related-terms.php:256
-#: classes/fields/class.field-select.php:100
-#: classes/fields/class.field-text.php:75
-#: classes/fields/class.field-textarea.php:88
-#: classes/fields/class.field-wysiwyg.php:131
-msgid "Instruction"
-msgstr ""
-
-#: classes/fields/class.field-boolean.php:134
-#: classes/fields/class.field-check.php:133
-#: classes/fields/class.field-colorpicker.php:119
-#: classes/fields/class.field-datepicker.php:196
-#: classes/fields/class.field-file.php:124
-#: classes/fields/class.field-image.php:119
-#: classes/fields/class.field-radio.php:132
-#: classes/fields/class.field-related-posts.php:267
-#: classes/fields/class.field-related-terms.php:263
-#: classes/fields/class.field-select.php:107
-#: classes/fields/class.field-text.php:82
-#: classes/fields/class.field-textarea.php:95
-#: classes/fields/class.field-wysiwyg.php:138
-msgid "Notes"
-msgstr ""
-
 #: classes/fields/class.field-check.php:21
 msgid "Check"
-msgstr ""
-
-#: classes/fields/class.field-check.php:87
-#: classes/fields/class.field-radio.php:86
-#: classes/fields/class.field-select.php:81
-msgid "Choices"
-msgstr ""
-
-#: classes/fields/class.field-check.php:93
-#: classes/fields/class.field-radio.php:92
-#: classes/fields/class.field-select.php:87
-msgid ""
-"If you want to separate the key and the value, enter as follows: key => value"
-msgstr ""
-
-#: classes/fields/class.field-check.php:97
-#: classes/fields/class.field-radio.php:96
-msgid "Display Direction"
 msgstr ""
 
 #: classes/fields/class.field-check.php:101
@@ -202,27 +104,6 @@ msgstr ""
 
 #: classes/fields/class.field-datepicker.php:29
 msgid "Date picker"
-msgstr ""
-
-#: classes/fields/class.field-datepicker.php:135
-msgid "Date Format"
-msgstr ""
-
-#: classes/fields/class.field-datepicker.php:143
-msgid "e.g dd/mm/yy"
-msgstr ""
-
-#: classes/fields/class.field-datepicker.php:153
-msgid "Max Date"
-msgstr ""
-
-#: classes/fields/class.field-datepicker.php:161
-#: classes/fields/class.field-datepicker.php:179
-msgid "e.g +1m +1w"
-msgstr ""
-
-#: classes/fields/class.field-datepicker.php:171
-msgid "Min Date"
 msgstr ""
 
 #: classes/fields/class.field-file.php:21
@@ -246,8 +127,8 @@ msgstr ""
 msgid "Image Select"
 msgstr ""
 
-#: classes/fields/class.field-image.php:129
-msgid "Preview Size"
+#: classes/fields/class.field-message.php:21
+msgid "Message"
 msgstr ""
 
 #: classes/fields/class.field-radio.php:21
@@ -258,19 +139,9 @@ msgstr ""
 msgid "Related Posts"
 msgstr ""
 
-#: classes/fields/class.field-related-posts.php:209
-#: classes/fields/class.field-related-terms.php:207
-msgid "Search..."
-msgstr ""
-
 #: classes/fields/class.field-related-posts.php:213
 #: classes/fields/class.field-related-terms.php:211
 msgid "Load more"
-msgstr ""
-
-#: classes/fields/class.field-related-posts.php:252
-#: classes/fields/class.field-related-terms.php:248
-msgid "Selectable number"
 msgstr ""
 
 #: classes/fields/class.field-related-terms.php:24
@@ -290,10 +161,6 @@ msgstr ""
 msgid "Textarea"
 msgstr ""
 
-#: classes/fields/class.field-textarea.php:69
-msgid "Rows"
-msgstr ""
-
 #: classes/fields/class.field-wysiwyg.php:26
 msgid "Wysiwyg"
 msgstr ""
@@ -302,29 +169,10 @@ msgstr ""
 msgid "Visual"
 msgstr ""
 
-#: classes/fields/class.field-wysiwyg.php:160
 #: classes/fields/class.field-wysiwyg.php:161
 msgid "Add Media"
 msgstr ""
 
-#: classes/models/class.abstract-field-base.php:105
-msgid "Name"
-msgstr ""
-
-#: classes/models/class.abstract-field-base.php:116
-msgid "Label"
-msgstr ""
-
-#: classes/models/class.group.php:127
-msgid "Repeat"
-msgstr ""
-
-#: classes/models/class.group.php:132
-msgid "Group name"
-msgstr ""
-
-#. #-#-#-#-#  smart-custom-fields.pot (Smart Custom Fields 3.1.6)  #-#-#-#-#
-#. Plugin Name of the plugin/theme
 #: classes/models/class.revisions.php:128 smart-custom-fields.php:168
 #: smart-custom-fields.php:169 smart-custom-fields.php:170
 msgid "Smart Custom Fields"
@@ -365,20 +213,4 @@ msgstr ""
 
 #: smart-custom-fields.php:180
 msgid "No Fields found in Trash."
-msgstr ""
-
-#. Plugin URI of the plugin/theme
-msgid "https://github.com/inc2734/smart-custom-fields/"
-msgstr ""
-
-#. Description of the plugin/theme
-msgid "Smart Custom Fields is a simple plugin that management custom fields."
-msgstr ""
-
-#. Author of the plugin/theme
-msgid "inc2734"
-msgstr ""
-
-#. Author URI of the plugin/theme
-msgid "https://2inc.org"
 msgstr ""
